# storming_cancer_atlas

./: README.md  cnv.py  colormaps.py  pyproject.toml  util.py
ECM/: ecm_tools.py
Fig1/: Fig1.ipynb
Fig2/: Fig2.ipynb
Fig3/: Bcells_proportions.ipynb  Endothelial_proportions.ipynb  Myeloid_proportions.ipynb  Myofibroblast_proportions.ipynb  OverallProportions.ipynb  Tcells_proportions.ipynb  prop_utils.py
Fig4/: cnv_other_celltypes.ipynb  flowcharts.py
Fig5/: ecm_de_data.py  ecm_integration_NE_vs_M.ipynb  ecm_integration_NE_vs_T.ipynb  ecm_tools.py
Fig5/data/: ecm_DEG_MvsT.csv  ecm_DEG_NEvsM.csv
Fig6/: FigS10.ipynb  Table_S8_CODEX_pathology_concordance.xlsx
cell-cell notebooks/: EsoAtlas_ligrec_pickle_maker.ipynb  EsoAtlas_revision_cell_cell.ipynb  cell-cell plots.ipynb  ligrec_pickle.py
fitzgerald/: Fitzgerald2023_fibroblasts.ipynb
