[project]
name = "storming-cancer-atlas"
version = "0.1.0"
description = "Code for the STORMing Cancer Esophagus Atlas papear"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz==0.20",
    "decoupler==1.8",
    "ete3==3.1.3",
    "ipython==8.*",
    "jax==0.4.35", # needed to work with pertypy sccoda
    "jupyterlab>=4.4.0",
    "muon==0.1.7",
    "pertpy==0.9.4",
    "pydeseq2==0.4.12",
    "scanpy==1.10.4",
    "sctools@git+https://github.com/redst4r/sctools",
    "tidyverse@git+https://github.com/redst4r/pytidyverse",
    "toytree==3.0.6",
    "infercnvpy@git+https://github.com/redst4r/infercnvpy@storming_cancer_atlas",
    "scipy==1.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.3",
]
